# Dashboard-E-commerce

./: README.md  main.py  pyproject.toml  test_connectivite.py
data/: e_commerce_sales.csv
pages/: analyses.py  clients.py  ventes.py
streamlit/: config.toml
utils/: auth_duckdb.py  auth_supabase.py  charts.py  data_loader.py  metrics.py
