[project]
name = "projet-app-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

# Python 3.14 cause des erreurs → on limite proprement
requires-python = ">=3.10,<3.14"

dependencies = [
    "argon2>=0.1.10",
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "duckdb>=1.4.2",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "plotly>=6.5.0",
    "pydantic[email]>=2.12.4",
    "streamlit>=1.51.0",
    "streamlit-extras",
]
